--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       <svg class="icon-menu">
         <use href="./images/sprite.svg#icon-menu" />
       </svg>
+      <h1 class="logo"> cool shop </h1>
+
+      <form action="">
+        <input type="text"placeholder>
+      </form>
 
       <!-- Іконка пошуку -->
       <i class="fa-solid fa-magnifying-glass"></i>
