--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
       <svg class="icon-menu">
         <use href="./images/sprite.svg#icon-menu" />
       </svg>
-      <h1 class="logo"> cool shop </h1>
+      <h1 class="logo">cool shop</h1>
 
-      <form action="">
-        <input type="text"placeholder>
-      </form>
-
-      <!-- Іконка пошуку -->
-      <i class="fa-solid fa-magnifying-glass"></i>
+      <form class="form">
+        <input type="text" placeholder />
+        <button>
+          <!-- Іконка пошуку -->
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form class>
 
       <!-- Іконка сердечко -->
       <svg class="icon-favorite-light">
