--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cool Shop</title>
   </head>
+
   <body>
     <!-- Нижче має бути твій код 😀 -->
     <!-- Твій код повинен бути в межах блоку body -->
@@ -25,15 +26,22 @@
       <svg class="icon-menu">
         <use href="./images/sprite.svg#icon-menu" />
       </svg>
+
       <h1 class="logo">cool shop</h1>
 
       <form class="form">
-        <input type="text" placeholder />
-        <button>
+        <input class="input" type="text" placeholder />
+        <button class inbutton>
           <!-- Іконка пошуку -->
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
-      </form class>
+      </form>
+
+      <div class="language-changer">
+        <button class="language-changer-button" type="button">EN</button>
+        <p>|</p>
+        <button class="language-changer-button" type="button">UA</button>
+      </div>
 
       <!-- Іконка сердечко -->
       <svg class="icon-favorite-light">
@@ -45,6 +53,7 @@
         <use href="./images/sprite.svg#icon-basket" />
       </svg>
     </header>
+
     <main>
       <!-- Тут в блоці main потрібно розмістити основний контент сторінки -->
 
