--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Нижче має бути твій код 😀 -->
     <!-- Твій код повинен бути в межах блоку body -->
     <!-- <body> - це початок блоку, </body > - це кінець блоку -->
-    <header>
+    <header class="header">
       <!-- Тут в блоці header потрібно створити "шапку" сайту -->
 
       <!-- Іконка меню -->
@@ -30,8 +30,8 @@
       <h1 class="logo">cool shop</h1>
 
       <form class="form">
-        <input class="input" type="text" placeholder />
-        <button class inbutton>
+        <input class="search-input" type="text" placeholder />
+        <button class="search-button" type="button">
           <!-- Іконка пошуку -->
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
