--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="logo">cool shop</h1>
 
         <form class="form">
-          <input class="search-input" type="text" placeholder />
+          <input class="search-input" type="text" placeholder="search..." />
           <button class="search-button" type="button">
             <!-- Іконка пошуку -->
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -62,10 +62,25 @@
       <!-- Тут в блоці main потрібно розмістити основний контент сторінки -->
 
       <!-- Список видів товарів -->
-      <section></section>
+      <section class="container">
+      <ul class="menu-list">
+        <li>Техніка</li>
+        <li>Інструменти</li>
+        <li>Меблі</li>
+        <li>Сантехніка</li>
+        <li>Спорт</li>
+        <li>Одяг</li>
+        <li>Косметика</li>
+        <li>Іграшки</li>
+      </section>
 
       <!-- Секція з рекламою -->
-      <section></section>
+      <section class="container">
+        <div class="advertising">
+          <p> Знижки на спортивні товари до 50%
+         на все ЛІТО</p>
+        </div>
+      </section>
 
       <!-- Секція "Популярні" -->
       <section>
