--- a/index.html
+++ b/index.html
@@ -63,23 +63,33 @@
 
       <!-- Список видів товарів -->
       <section class="container">
-      <ul class="menu-list">
-        <li>Техніка</li>
-        <li>Інструменти</li>
-        <li>Меблі</li>
-        <li>Сантехніка</li>
-        <li>Спорт</li>
-        <li>Одяг</li>
-        <li>Косметика</li>
-        <li>Іграшки</li>
+        <ul class="menu-list">
+          <li>Техніка</li>
+          <li>Інструменти</li>
+          <li>Меблі</li>
+          <li>Сантехніка</li>
+          <li>Спорт</li>
+          <li>Одяг</li>
+          <li>Косметика</li>
+          <li>Іграшки</li>
+        </ul>
       </section>
 
       <!-- Секція з рекламою -->
       <section class="container">
         <div class="advertising">
-          <p> Знижки на спортивні товари до 50%
-         на все ЛІТО</p>
+          <p class="advertising-text">
+            Знижки на спортивні товари <br />
+            <span class="bold">до 50%</span> на все
+            <span class="bold">ЛІТО</span>
+          </p>
         </div>
+        <svg class="icon-arrow-left">
+          <use href="./images/sprite.svg#icon-button-left" />
+        </svg>
+        <svg class="icon-arrow-right">
+          <use href="./images/sprite.svg#icon-button-right" />
+        </svg>
       </section>
 
       <!-- Секція "Популярні" -->
